--- a/src/app/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/hazte-cliente/hazte-cliente.component.html
@@ -1,52 +1,80 @@
 <div class="container">
   <h1>Hazte Cliente</h1>
-  <form (submit)="guardaDatos()">
-    <div class="row">
+  <form class="needs-validation" novalidate (submit)="guardaDatos()">
+    <div class="form-row">
       <div class="col-md-4 mb-3">
         <label for="nombre">Nombre:</label>
         <input type="text" class="form-control" id="nombre" [(ngModel)]="name" required
           [ngModelOptions]="{standalone: true}">
+        <div class="valid-tooltip">
+
+        </div>
       </div>
       <div class="col-md-4 mb-3">
         <label for="apellidos">Apellidos:</label>
         <input type="text" class="form-control" id="apellidos" [(ngModel)]="secondName" required
           [ngModelOptions]="{standalone: true}">
-      </div>
-      <div class="col-md4 mb-3">
-        <label for="telefono">Teléfono:</label>
-        <input type="text" class="form-control" id="telefono" [(ngModel)]="phone" required
-          [ngModelOptions]="{standalone: true}">
-      </div>
-    </div><br>
-    <div class="form-row">
-      <div class="col">
-        <label for="documentodeidentidad">Documento de Identidad:</label>
-        <input type="text" class="form-control" id="documentodeidentidad" [(ngModel)]="identification" required
-          [ngModelOptions]="{standalone: true}">
-      </div>
-      
-    </div><br>
-    <div class="form-row">
-      <div class="col">
-        <label for="email">Email:</label>
-        <input type="email" id="email" [(ngModel)]="email" required [ngModelOptions]="{standalone: true}">
-      </div>
-      <div class="col">
-        <label for="tipoDeDocumento">Tipo de Documento:</label>
-        <select [(ngModel)]="identificationType" [ngModelOptions]="{standalone: true}" name="identificationType">
-          <option value="0">Seleccion Tipo de Identificador....</option>
-          <option
-            value="identificationType._links.self.href.substring(identificationType._links.self.href.lastIndexOf('/')+1)"
-            *ngFor="let identificationType of identificationTypes">{{identificationType.description}}</option>
-        </select>
-      </div><br>
-      <div class="form-row">
-        <div class="col">
-          <label for="usuario">Usuario:</label>
-          <input type="text" id="usuario" [(ngModel)]="user" required [ngModelOptions]="{standalone: true}">
+        <div class="valid-tooltip">
         </div>
       </div>
     </div>
-    <button type="submit">Guardar</button>
+    <div class="form-row">
+      <div class="col-md-4 mb-3">
+        <label for="telefono">Telefono:</label>
+        <input type="text" class="form-control" id="telefono" [(ngModel)]="phone" required
+          [ngModelOptions]="{standalone: true}">
+        <div class="valid-tooltip">
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <label for="documentodeidentidad">Documento de Identidad</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><select [(ngModel)]="identificationType"
+                [ngModelOptions]="{standalone: true}" name="identificationType">
+                <option value="0">Tipo de Documento</option>
+                <option
+                  value="identificationType._links.self.href.substring(identificationType._links.self.href.lastIndexOf('/')+1)"
+                  *ngFor="let identificationType of identificationTypes">{{identificationType.description}}</option>
+              </select></span>
+          </div>
+          <input type="text" class="form-control" id="documentodeidentidad" placeholder="Número de Documento"
+            [(ngModel)]="identification" required [ngModelOptions]="{standalone: true}" required>
+          <div class="invalid-tooltip">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div>
+        <div class="col-md-4 mb-3">
+          <label for="email">Email:</label>
+          <input type="text" id="email" class="form-control" [(ngModel)]="email" required
+            [ngModelOptions]="{standalone: true}">
+          <div class="invalid-tooltip">
+
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <label for="usuario">Usuario</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="inputGroupPrepend2">@</span>
+            </div>
+            <input type="text" class="form-control" id="usuario" [(ngModel)]="user" [ngModelOptions]="{standalone: true}"
+            required>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <label for="contraseña">Contraseña</label>
+          <input type="text" class="form-control" id="password" [(ngModel)]="password"
+            [ngModelOptions]="{standalone: true}" required>
+          <div class="invalid-tooltip">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="btn btn-primary" type="submit">Guardar</button>
   </form>
 </div>
