--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,5 +1,6 @@
-<header>
+<header class="mb-5">
 <div><h1>LA COLCHA DE TU MADRE</h1></div>
-   <!--<app-login></app-login>-->
-  <app-nav></app-nav>  
+   <!-- <app-login></app-login> 
+  <app-nav *ngIf="logado"></app-nav> -->
+  <app-nav *ngIf="!logado"></app-nav>  
 </header>
