--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,15 +1,10 @@
-<div class="container fondo-secundario">
-    <div class="container">
-        <section class="jumbotron text- center text-white texto-resaltado">
-            <div class="container">
-                <h1 class="display-4">!bienvenido a nuestra tienda de la colcha de tu madre¡</h1>
-            </div>
-        </section>
+<div class="container">
+    <div>
+        
     </div>
 </div><br>
 
-<div class="conatainer-fluid p-5 text-white text-center texto-resaltado">
-    <h1>la colcha de tu madre hecha de pluma de ganzo</h1>
-    <h2>menos de 2 minutos te das de alta</h2>
-    <a class="btn btn-light btn-lg" role="button" routerLink="darseAlta">lets'go!</a>
+<div class="d-flex justify-content-center align-items-center">
+    
+    <a class="btn btn-light btn-lg" role="button" routerLink="darseAlta">let's go!</a>
 </div>
