--- a/src/app/componentes/modal-rol/modal-rol.component.html
+++ b/src/app/componentes/modal-rol/modal-rol.component.html
@@ -21,7 +21,8 @@
 
             <!--Modal Footer-->
             <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="realizarComunicacion()">Cerrar</button>
+                <button type="button" class="btn btn-danger"
+                 data-bs-dismiss="modal" (click)="realizarComunicacion()">Cerrar</button>
             </div>
         </div>
     </div>
