--- a/src/app/componentes/user/user.component.html
+++ b/src/app/componentes/user/user.component.html
@@ -14,18 +14,20 @@
             <td class="text-center">{{usuario.user}}</td>
             <td class="text-center">{{clave.password}}</td>
             <td class="text-center">{{habilitado.enabled}}</td>
-            <td *ngFor="let rol of roles" value="{{rol._links.rol.href.substring(rol._links.rol.href.lastIndexOf('/')+1)}}" class="text-center">{{rol.rol}}</td>
+            <td class="text-center" *ngFor="let rol of roles">{{rol.rol}}</td>
             <td class="text-center">
-                <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal"> 
+                <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal">
                     <i class="bi bi-pencil-fill"></i> </a>
-                <a href="#" (click)="eliminar(usuario._links.self.href.substring(usuario._links.self.href.lastIndexOf('/')+1))">
+                <a href="#"
+                    (click)="eliminar(usuario._links.self.href.substring(usuario._links.self.href.lastIndexOf('/')+1))">
                     <i class="bi bi-trash3-fill"></i> </a>
             </td>
         </tr>
     </table>
 
     <div class="text-center">
-        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
+        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal"
+            data-bs-target="#myModal">ALTA</button>
         <app-modal-user (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-user>
     </div>
 </div>
