--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -48,4 +48,10 @@
         </div>
 
     </div>
-</footer>
+</footer> 
+<!-- <mat-toolbar color="primary" class="footer">
+    <div class="footer-content">
+      <span class="footer-text">Este es el contenido del footer</span>
+    </div>
+  </mat-toolbar> -->
+  
