--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,7 +1,7 @@
 
 
 <footer class="footer">
-    <div class="row p-3 pb-1 bg-warning text-white">
+    <div class="row p-3 pb-1 bg-dark text-white">
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h3"> <strong><em>ALLA PUTTANESCA</em></strong></p>           
                 <p class="fas fa-home me-3">Madrid, Lavapies</p>           
