boton activa o desactiva

--- a/src/app/componentes/modal-configuration/modal-configuration.component.html
+++ b/src/app/componentes/modal-configuration/modal-configuration.component.html
@@ -10,7 +10,7 @@
 
             <!-- Modal body -->
             <div class="modal-body text-center">
-                <label for="stockAlarm">Stock Alarm: </label><input type="text" name="stockAlarm"
+                <label for="stockAlarm">Stock Alarm: </label><input type="number" name="stockAlarm"
                     [(ngModel)]="stockAlarm" value="{{stockAlarmPlaceHolder}}"><br>
                 <button type="button" class="button" (click)="grabar()">GRABAR</button>
             </div>
