--- a/src/app/componentes/modal-user/modal-user.component.html
+++ b/src/app/componentes/modal-user/modal-user.component.html
@@ -23,7 +23,7 @@
                 <select [(ngModel)]="rol">
                     <option value="0">Seleccione rol...</option>
                     <option *ngFor="let fun of roles"
-                        value="{{fun._links.self.href.substring(fun._links.self.href.lastIndexOf('/')+1)}}">{{fun.rol}}ya lo corregire con rol
+                        value="{{fun._links.self.href.substring(fun._links.self.href.lastIndexOf('/')+1)}}">{{fun.rol}}
                     </option>
                 </select><br><br>
 
