--- a/src/app/componentes/rol/rol.component.html
+++ b/src/app/componentes/rol/rol.component.html
@@ -1,7 +1,7 @@
 <div>
     <h1 class="text-center">{{titulo}}</h1>
     <h1 class="text-center">{{mensaje}}</h1>
-    <table class="table table-stripped table-bordered">
+    <table class="table table-stripped table-bordered ">
 
         <tr>
             <th class="text-center">ROLES</th>
@@ -11,18 +11,18 @@
         <tr *ngFor="let rol of roles">
             <td class="text-center">{{rol.rol}}</td>
             <td>
-                <a href="#" (click)="modificar(rol)" data-bs-toggle="modal" data-bs-target="#myModal">
+                <a  (click)="modificar(rol)" data-bs-toggle="modal" data-bs-target="#myModal">
                     <i class="bi bi-pencil-fill"></i>
 
                 </a>
-                <a href="#" (click)="eliminar(rol._links.self.href.substring(rol._links.self.href.lastIndexOf('/')+1))">
+                <a  (click)="eliminar(rol._links.self.href.substring(rol._links.self.href.lastIndexOf('/')+1))">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
         </tr>
     </table>
     <div class="text-center">
-        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
+        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal" [disabled]="contador>0">ALTA</button>
     </div>
     <app-modal-rol (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-rol>
 </div>
