--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -15,7 +15,7 @@
 
         <td>
           <a (click)="abrirModal(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1), element)" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-pencil-fill"></i></a>
-          <a class="wbtn" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))" data-bs-toggle="modal" data-bs-target="#myModal"><i class="bi bi-trash3-fill"></i></a>
+          <a class="wbtn" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))"><i class="bi bi-trash3-fill"></i></a>
         </td>
       </tr>
     </table>
@@ -24,9 +24,9 @@
     <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label=""></mat-paginator>-->
 
     <div class="w-100 text-center">
+      <div class="text-primary mb-3" role="alert">{{ message }}</div>
       <button type="button" class="btn btn-primary" (click)="abrirModal('','')" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo producto</button>
-      <!--<button type="button" class="btn btn-primary" data-bs-click="abrirModal('','')" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo producto</button>-->
     </div>
 
-    <app-modal-existing-products #modal></app-modal-existing-products>
+    <app-modal-existing-products #modal (eventoExistingProduct)="refreshData($event)"></app-modal-existing-products>
   </div>
