--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -27,5 +27,5 @@
     <li class="nav-item">
       <a class="nav-link active bg-dark text-white" routerLink="tipoTarjetas">Tipos de tarjetas</a>
     </li>
-
   </ul>
+  </nav>
