--- a/src/app/panel-administrador/panel-administrador.component.html
+++ b/src/app/panel-administrador/panel-administrador.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mb-5">
   <h1>
     <p>Una tabla para gobernarlos a todos!</p>
   </h1>
@@ -27,7 +27,7 @@
   <h2>{{linksForaneosTabla.length}}</h2> -->
   <!-- <button type="button" (click)="activarTabla()">activarTabla</button> -->
 
-
+  
   <div *ngIf="mostrarLoading">
     <div class="mx-auto mt-5">
       <div class="align-items-center">
