--- a/src/app/componentes/user/user.component.html
+++ b/src/app/componentes/user/user.component.html
@@ -11,14 +11,14 @@
             <th class="text-center">ACCIONES</th>
         </tr>
 
-        <tr *ngFor="let usuario of usuarios; let rolesUrls of roles">
+        <tr *ngFor="let usuario of usuarios; let fun of roles" value="{{fun._links.self.href.substring(fun._links.self.href.lastIndexOf('/') +1)}}">
             <td class="text-center">{{usuario.user}}</td>
             <td class="text-center">{{usuario.password}}</td>
             <td class="text-center">{{usuario.enabled}}</td>
-            <td class="text-center" *ngFor="let rolUrl of roles | keyvalue">
-                <span [attr.data-rol]="rolUrl.key">{{ rolUrl.value.rol }}</span>
-              </td>
-            
+            <td class="text-center">
+                    {{fun.rol}}
+            </td>
+
             <td class="text-center">
                 <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal">
                     <i class="bi bi-pencil-fill"></i> </a>
