--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-<div><h1>La Poya</h1></div>
+<div><h1>La Poyeria</h1></div>
    <!--<app-login></app-login>-->
   <app-nav></app-nav>  
 </header>
