--- a/src/app/componentes/modal-existing-products/modal-existing-products.component.html
+++ b/src/app/componentes/modal-existing-products/modal-existing-products.component.html
@@ -17,12 +17,12 @@
             </div>
             <div class="input-group mb-2">
                 <span class="input-group-text spw-3" id="basic-addon1">Precio de venta</span>
-                <input type="text" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="price" [value]="price">
+                <input type="decimal" class="form-control text-right" aria-label="Euro precio de venta (con coma y dos decimales)" [(ngModel)]="price" [value]="price">
                 <span class="input-group-text">€</span>
             </div>
             <div class="input-group mb-2">
                 <span class="input-group-text spw-3" id="basic-addon1">Existencias</span>
-                <input type="text" class="form-control" aria-label="Existencias" aria-describedby="Existencias" [(ngModel)]="stock" [value]="stock" (input)="stockChange(price, stock)">
+                <input type="number" class="form-control" aria-label="Existencias" aria-describedby="Existencias" [(ngModel)]="stock" [value]="stock" (input)="stockChange(price, stock)">
             </div>
             <div class="mb-3 mt-3">
                 <p class="fw-bold h4 d-block text-end" style="color:#4e4e4e">Total {{ total }}</p>
@@ -33,8 +33,9 @@
             </div>
             <div class="modal-footer">
             <div class="d-grid gap-2 d-md-block">
-                <button class="btn btn-secondary m-3" type="button" data-bs-dismiss="modal">Cerrar</button>
-                <button class="btn btn-primary" type="button" (click)="saveData()" data-bs-dismiss="modal">Aceptar</button>
+                <!--<button class="btn btn-secondary m-3" type="button" data-bs-dismiss="modal" (click)="closeModal()">Cerrar</button>-->
+                <button class="btn btn-secondary m-3" type="button" (click)="closeModal()">Cerrar</button>
+                <button class="btn btn-primary" type="button" (click)="saveData()">Aceptar</button>
             </div>
             </div>
       </div>
