--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,12 @@
 <div class="modalConectando oculto" id="modalConectando">
     <div class="contenedorModal mx-auto mt-5">
         <div class="align-items-center">
-            <div class="p-2 mx-1 justify-content-center">Estableciendo conexión segura</div>
-            <div class="p-2 mt-3 align-items-center d-flex justify-content-center">
+            <div class="align-items-center d-flex justify-content-center">
+                <img src="assets/guardian.png" class="w-50">
+            </div>            
+            <div class="p-2 mx-1 align-items-center d-flex justify-content-center texto-secundario">
+                <p>Estableciendo conexión segura</p></div>
+            <div class="p-2 mt-3 align-items-center d-flex justify-content-center text-success">
                 <strong>Loading...</strong>
                 <div class="spinner-border m-2" role="status" aria-hidden="true"></div>
             </div>
