--- a/src/app/componentes/rol/rol.component.html
+++ b/src/app/componentes/rol/rol.component.html
@@ -1,7 +1,7 @@
 <div>
     <h1 class="text-center">{{titulo}}</h1>
     <h1 class="text-center">{{mensaje}}</h1>
-    <table class="table table-stripped table-bordered ">
+    <table class="table table-stripped table-bordered">
 
         <tr>
             <th class="text-center">ROLES</th>
@@ -10,12 +10,12 @@
 
         <tr *ngFor="let rol of roles">
             <td class="text-center">{{rol.rol}}</td>
-            <td>
-                <a  (click)="modificar(rol)" data-bs-toggle="modal" data-bs-target="#myModal">
+            <td class="text-center">
+                <a href="" (click)="modificar(rol)" data-bs-toggle="modal" data-bs-target="#myModal">
                     <i class="bi bi-pencil-fill"></i>
 
                 </a>
-                <a  (click)="eliminar(rol._links.self.href.substring(rol._links.self.href.lastIndexOf('/')+1))">
+                <a href="" (click)="eliminar(rol._links.self.href.substring(rol._links.self.href.lastIndexOf('/')+1))">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
