--- a/src/app/operaciones/operaciones.component.html
+++ b/src/app/operaciones/operaciones.component.html
@@ -1,20 +1,24 @@
-
 <div class="container">
-  <div class="text-center">
+    <div class="text-center">
       <h2>Ingresos o Retiros</h2>
-      
+  
       <div class="form-group">
-          <label for="monto">Importe:</label>
-          <input type="number" class="form-control" id="monto" [(ngModel)]="monto" placeholder="Ingrese el monto" />
+        <label for="monto">Importe:</label>
+        <input type="number" class="form-control" id="monto" [(ngModel)]="monto" placeholder="Ingrese el monto" />
       </div>
-      
+  
+      <div class="form-group">
+        <label for="concepto">Concepto:</label>
+        <input type="text" class="form-control" id="concepto" [(ngModel)]="concepto" placeholder="Ingrese el concepto" />
+      </div>
+  
       <div class="btn-group">
-          <button class="btn btn-success" (click)="realizarDeposito()">Ingresar</button>
-          <button class="btn btn-success" (click)="realizarRetiro()">Retirar</button>
+        <button class="btn btn-success" (click)="realizarMovimiento('Ingreso')">Ingresar</button>
+        <button class="btn btn-success" (click)="realizarMovimiento('Retiro')">Retirar</button>
       </div>
-      
-      <p>Última operación: {{ monto }}</p>
+  
+      <p>Último movimiento: {{ ultimoMovimiento?.tipo }} - {{ ultimoMovimiento?.concepto }} - {{ ultimoMovimiento?.fecha | date: 'dd/MM/yyyy' }}</p>
       <p>Saldo actual: {{ saldo }}</p>
+    </div>
   </div>
-</div>
-
+  
